fix for LanguageSwitcher so it will be above searchInput in z-index

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -96,6 +96,7 @@
 
 .dropdown {
   position: absolute;
+  z-index: 100;
   display: flex;
   width: 7rem;
   padding: 0.9375rem;
